[gd_scene load_steps=7 format=3 uid="uid://c7cwh26kidn2f"]

[ext_resource type="Script" uid="uid://codpdncq5yhvn" path="res://Scripts/assignment_menu.gd" id="1_md03b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_window"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_close_btn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_itemlist"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8784314, 0.8784314, 0.8784314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cancel_btn"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="AssignmentMenu" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -200.0
offset_right = 225.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_window")
script = ExtResource("1_md03b")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HeaderPanel" type="Panel" parent="MainVBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="TitleLabel" type="Label" parent="MainVBox/HeaderPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -11.5
offset_right = 100.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Выберите сотрудника"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MainVBox/HeaderPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -15.0
offset_right = -24.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_close_btn")
text = "X"

[node name="ContentMargin" type="MarginContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainVBox/ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ItemList" type="ItemList" parent="MainVBox/ContentMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
theme_override_colors/font_hovered_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
theme_override_colors/font_hovered_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_itemlist")

[node name="CancelButton" type="Button" parent="MainVBox/ContentMargin/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_cancel_btn")
text = "Закрыть"

[connection signal="pressed" from="MainVBox/HeaderPanel/CloseButton" to="." method="_on_close_pressed"]
[connection signal="item_activated" from="MainVBox/ContentMargin/VBoxContainer/ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="pressed" from="MainVBox/ContentMargin/VBoxContainer/CancelButton" to="." method="_on_close_pressed"]
